Fix T54322: partial redraw not working after recent refactor.